--- a/src/Website/Layout/ProductDetail/ProductDetail.css
+++ b/src/Website/Layout/ProductDetail/ProductDetail.css
@@ -461,7 +461,41 @@
   }
 }
 
+.video-wrapper {
+  position: relative;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 aspect ratio */
+  overflow: hidden;
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+
 /* Responsive Design */
+
+/* Tablet */
+@media (min-width: 601px) and (max-width: 1024px) {
+  .video-wrapper {
+    max-width: 700px;
+    margin: 0 auto;
+  }
+}
+
+/* Desktop */
+@media (min-width: 1025px) {
+  .video-wrapper {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+}
+
 @media (max-width: 1024px) {
   .product-container {
     gap: 3rem;
