--- a/src/Website/Layout/ProductDetail/ProductDetail.css
+++ b/src/Website/Layout/ProductDetail/ProductDetail.css
@@ -461,7 +461,7 @@
   }
 }
 
-.video-wrapper {
+.fr-video-wrapper {
   position: relative;
   width: 100%;
   padding-top: 56.25%; /* 16:9 aspect ratio */
@@ -482,7 +482,7 @@
 
 /* Tablet */
 @media (min-width: 601px) and (max-width: 1024px) {
-  .video-wrapper {
+  .fr-video-wrapper {
     max-width: 700px;
     margin: 0 auto;
   }
@@ -490,7 +490,7 @@
 
 /* Desktop */
 @media (min-width: 1025px) {
-  .video-wrapper {
+  .fr-video-wrapper {
     max-width: 800px;
     margin: 0 auto;
   }
